--- a/css/nicdark_style.css
+++ b/css/nicdark_style.css
@@ -466,6 +466,7 @@ table{ border-collapse: collapse; }
 .nicdark_padding_8 { padding: 8px; }
 .nicdark_padding_10 { padding: 10px; }
 .nicdark_padding_10_20 { padding: 10px 20px; }
+.nicdark_padding_8_20 { padding: 8px 20px; }
 .nicdark_padding_20_10 { padding: 20px 10px; }
 .nicdark_padding_13_10 { padding: 13px 10px; }
 .nicdark_padding_13 { padding: 13px; }
